# PokerBots

./: .gitignore  Makefile  PROPOSAL.md  README.md  instructions.md  pyproject.toml
agents/: base_agent.py  cfr_agent.py  features.py  openspiel_cfr_agent.py  random_agent.py
agents/ac_agent/: __init__.py  ac_agent.py  features.py  networks.py  rollout.py
agents/dqn_agent/: __init__.py  dqn_agent.py  features.py  networks.py  replay.py
docs/: ac_architecture.md  dqn_architecture.md
env/: action.py  card.py  env.py  hand_strength.py  processed_state.py  state.py
evaluation/: evaluate_sessions.py  evaluator.py  model_loader.py  plot_overlay.py
main/: main.py
opponents/: base_opponent.py
players/: ac_kl_player.py  ac_player.py  ac_pure_player.py  base_player.py  calling_station_player.py  cfr_player.py  dqn_player.py  folding_player.py  maniac_player.py  old_man_coffee_player.py  opponents.py  parameterized_player.py  polarizing_player.py  random_player.py  tight_player.py
results/: DoubleDQN_vs_Calling Station.npz  DoubleDQN_vs_Maniac.npz  DoubleDQN_vs_Old Man Coffee.npz  DoubleDQN_vs_Polar.npz  sessions_dqn-calling_vs_calling.npz  sessions_dqn-calling_vs_maniac.npz  sessions_dqn-calling_vs_omc.npz  sessions_dqn-calling_vs_polar.npz  sessions_dqn-maniac_vs_calling.npz  sessions_dqn-maniac_vs_maniac.npz  sessions_dqn-maniac_vs_omc.npz  sessions_dqn-maniac_vs_polar.npz  sessions_dqn-omc_vs_calling.npz  sessions_dqn-omc_vs_maniac.npz  sessions_dqn-omc_vs_omc.npz  sessions_dqn-omc_vs_polar.npz  sessions_dqn-polar_vs_calling.npz  sessions_dqn-polar_vs_maniac.npz  sessions_dqn-polar_vs_omc.npz  sessions_dqn-polar_vs_polar.npz
scripts/: evaluate.py  train_cfr.py  train_openspiel_cfr.py
train/: __init__.py  play_hand.py  plot_training.py  plot_training_old.py  train_ac.py  train_dqn.py
